--- a/styles/about us styles.css
+++ b/styles/about us styles.css
@@ -4,7 +4,7 @@
 
     background-size: 100px 100px cover;
     background-position: center;
-    height: 85vh;
+    height: 90vh;
     color: white;
     padding-top: 76px;
 }
@@ -84,7 +84,8 @@
 
 .who-are-we,
 .our-vision,
-.why-us {
+.why-us,
+.follow-us {
     opacity: 0;
     transform: translateY(50px);
     /* animation: fadeInUp 1s ease forwards;
@@ -142,12 +143,12 @@
 }
 
 
-@media (max-width: 768px) {
+@media (max-width: 500px) {
 
     .who-are-we-text h2,
     .our-vision-text h2,
     .why-us-text h2 {
-        font-size: 2rem;
+        font-size: 1.5rem;
     }
 
     .who-are-we-text p,
@@ -159,7 +160,7 @@
     .who-are-we-img,
     .our-vision-img,
     .why-us-img {
-        height: 300px;
+        height: 400px;
         border-radius: 0 0 10px 10px;
     }
 
@@ -167,5 +168,17 @@
     .our-vision-img .row,
     .why-us-img .row {
         flex-direction: column;
+    }
+}
+
+@media (max-width: 500px) {
+    .about-hero {
+        background-size: 1500px 1500px;
+    }
+
+    .about-hero h2 {
+        text-align: center;
+        font-size: 2.3rem;
+
     }
 }
